- Update app name, icon and splash screens

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Collyde</string>
+    <string name="app_name">Miami Marlins</string>
     <string name="facebook_app_id">218940665258942</string>
     <string name="fb_login_protocol_scheme">fb218940665258942</string>
 
